# rust-iot-platform

./: .gitignore  Cargo.toml  feature.md  feature_CN.md  readme.md  readme_CN.md  work.sh
api/: .env  Cargo.toml  app-local.yml
api/src/: main.rs
api/src/biz/: calc_param_biz.rs  calc_rule_biz.rs  calc_run_biz.rs  coap_biz.rs  dashboard_biz.rs  dept_biz.rs  device_group_biz.rs  device_info_biz.rs  device_install_record_biz.rs  http_biz.rs  message_list_biz.rs  mod.rs  mqtt_client_biz.rs  product_biz.rs  production_plan_biz.rs  repair_record_biz.rs  role_biz.rs  script_list_biz.rs  shipment_record_biz.rs  signal_biz.rs  signal_delay_waring_biz.rs  signal_delay_waring_param_biz.rs  signal_waring_config_biz.rs  sim_card_biz.rs  tcp_biz.rs  user_biz.rs  ws_biz.rs
api/src/biz/notice/: dingding_biz.rs  feishu_biz.rs  mod.rs
api/src/biz/transmit/: cassandra_transmit_biz.rs  clickhouse_transmit_biz.rs  influxdb_transmit_biz.rs  mod.rs  mongo_transmit_biz.rs  mysql_transmit_biz.rs
api/src/biz/transmit/bind/: cassandra_bind_biz.rs  clickhouse_bind_biz.rs  influxdb_bind_biz.rs  mod.rs  mongo_bind_biz.rs  mysql_bind_biz.rs
api/src/controller/: calc_param_router.rs  calc_rule_router.rs  coap_handler_router.rs  dashboard_router.rs  data_router.rs  demo_api.rs  dept_router.rs  device_group_router.rs  device_info_router.rs  device_router.rs  http_handler_router.rs  login_router.rs  message_list_router.rs  mod.rs  mqtt_client_router.rs  options_handler.rs  product_router.rs  production_plan_router.rs  repair_record_router.rs  role_router.rs  shipment_record_router.rs  signal_delay_waring_param_router.rs  signal_delay_waring_router.rs  signal_router.rs  signal_waring_config_router.rs  sim_card_router.rs  tcp_handler_router.rs  user_router.rs  ws_handler_router.rs
api/src/controller/notice/: dingding_router.rs  feishu_router.rs  mod.rs
api/src/controller/statistics/: mod.rs
api/src/controller/transmit/: cassandra_transmit_router.rs  clickhouse_transmit_router.rs  influxdb_transmit_router.rs  mod.rs  mongo_transmit_router.rs  mysql_transmit_router.rs
api/src/controller/transmit/bind/: cassandra_bind_router.rs  clickhouse_bind_router.rs  influxdb_bind_router.rs  mod.rs  mongo_bind_router.rs  mysql_bind_router.rs
api/src/db/: db_model.rs  mod.rs  redis.rs
api/src/ut/: mod.rs
common_lib/: Cargo.toml
common_lib/src/: config.rs  influxdb_utils.rs  lib.rs  models.rs  mongo_utils.rs  mysql_utils.rs  protocol_config.rs  rabbit_utils.rs  redis_handler.rs  redis_pool_utils.rs  servlet_common.rs  sql_utils.rs  time_utils.rs  ut.rs
data_processing/: Cargo.toml  app-local.yml
data_processing/src/: calc_handler.rs  coap_handler.rs  fff.rs  http_handler.rs  js_test.rs  main.rs  storage_handler.rs  waring_dealy_handler.rs  waring_handler.rs  ws_handler.rs
iot_protocol/coap/: Cargo.toml  app-local.yml
iot_protocol/coap-test/: Cargo.toml
iot_protocol/coap-test/src/: main.rs
iot_protocol/coap/src/: _main.rs  main.rs
iot_protocol/http/: Cargo.toml  app-local.yml
iot_protocol/http/src/: main.rs
iot_protocol/mqtt/: Cargo.toml  app-local.yml  log4rs.yml
iot_protocol/mqtt/src/: beat.rs  ctr.rs  main.rs  mqtt_async_sample.rs  mqtt_sample.rs  mqtt_sync_sample.rs  service_instace.rs
iot_protocol/tcp/: Cargo.toml  log4rs.yml  readme.md
iot_protocol/tcp/src/: main.rs  tcp_server.rs
iot_protocol/ws/: Cargo.toml  app-local.yml
iot_protocol/ws/src/: main.rs
iot_protocol/ws/src/api/: ctr.rs  mod.rs
notification/src/: main.rs
prom/: 02.md  gitcommit.md  sql提示词.md
