[package]
name = "common_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
redis = { version = "0.27.5",features = [ "r2d2" , "tokio-comp" ] }

tokio = { version = "1.41.0", features = ["full"] }
lazy_static = "1.5.0"
once_cell = "1.15"
serde_json = "1.0.132"

chrono = "0.4.38"
log = "0.4.22"
log4rs = "1.3.0"
lapin = {version = "2.5.0" ,features = ["default"]}
futures-lite = "2.3.0"
futures-util = "0.3.31"
influxdb2 = "0.5.2"
influxdb2-structmap = "0.2"
influxdb2-derive = "0.1.1"
num-traits = "0.2.19"
futures = { version = "0.3.31", default-features = false }
mongodb = "2.0.0"
