[package]
name = "common_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
redis = { version = "0.27.5", features = ["r2d2", "tokio-comp", "aio"] }

tokio = { version = "1.41.0", features = ["full"] }
lazy_static = "1.5.0"
once_cell = "1.15"
serde_json = "1.0.132"

chrono = "0.4.38"
log = "0.4.22"
log4rs = "1.3.0"
lapin = { version = "2.5.0", features = ["default"] }
futures-lite = "2.3.0"
futures-util = "0.3.31"
influxdb2 = "0.5.2"
influxdb2-structmap = "0.2"
influxdb2-derive = "0.1.1"
num-traits = "0.2.19"
futures = { version = "0.3.31", default-features = false }
mongodb = {version = "3.1"}
quick-js = "0.4.1"
chrono-tz = "0.5.2"

r2d2_redis = "0.14.0"
r2d2 = "0.8.10"
rand = "0.8.5"
env_logger = "0.11.5"
