[package]
name = "data_processing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.22"
common_lib = { path = "../common_lib" }
chrono = "0.4.38"
config = "0.14.1"
log4rs = "1.0"
tokio = "1.41.0"
quick-js = "0.4.1"
serde_json = "1.0.132"
serde = { version = "1.0.213", features = ["derive"] }