[package]
name = "coap-iot"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
tokio = { version = "1.41.0", features = ["full"] }
common_lib = { path = "../../common_lib" }
tracing = "0.1.40"
once_cell = "1.20.2"
serde_json = "1.0.132"
tracing-subscriber = "0.3.18"

redis = { version = "0.27.5",features = [ "r2d2" , "tokio-comp" ] }
time = "0.3.36"
chrono = "0.4"

log = "0.4.22"

log4rs = "1.0"
coap = "0.19"
coap-lite = "0.11.3"
async-std = "1.13.0"
