[package]
name = "ws-iot"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
tokio = { version = "1.41.0", features = ["full"] }
common_lib = { path = "../../common_lib" }
tracing = "0.1.40"
once_cell = "1.20.2"
serde_json = "1.0.132"
tracing-subscriber = "0.3.18"
redis = { version = "0.27.5",features = [ "r2d2" , "tokio-comp" ] }
time = "0.3.36"
chrono = "0.4"
log = "0.4.22"
log4rs = "1.0"
rocket = { version = "0.5.1", features = ["json"] }
base64 = "0.22.1"
tokio-tungstenite = "0.24"
futures-util = "0.3"
ws = { package = "rocket_ws", version = "0.1.1" }
uuid = { version = "1.11.0", features = ["v4"] }